# ANG_SIC

./: CMakeLists.txt  README.md
config_files/: MNIST_ANG.cfg  MNIST_Small_CNN.cfg  MNIST_lenet.cfg  lenet_ang.cfg
data/MNIST/: mnist_download.sh
src/: Activation.c  AnalyzeInputs.c  Bicubic.c  ClassLevelNetworks.c  Classes.c  Config.c  ConstructNetworks.c  Convolution.c  FixedPoint.c  Functions.c  GaborFilter.c  Inference.c  InputData.c  InputFileCIFAR.c  InputFileIR.c  InputFileISAR.c  InputFileImagenette.c  JenkFish.c  LRI.c  MAC.c  Network.c  NeuroGenesis.c  Perceptron.c  Prune.c  Synapse.c  Train.c  layer.c  main.c
src/include/: Activation.h  AnalyzeInputs.h  Bicubic.h  ClassLevelNetworks.h  Classes.h  Config.h  ConstructNetworks.h  Convolution.h  FixedPoint.h  Functions.h  GaborFilter.h  Inference.h  InputData.h  InputFileCIFAR.h  InputFileIR.h  InputFileISAR.h  InputFileImagenette.h  JenkFish.h  LRI.h  MAC.h  Network.h  NeuroGenesis.h  Perceptron.h  Prune.h  Synapse.h  Train.h  layer.h  main.h  utilf.h
